@@ -1,3 +1,9 @@
+2022-03-29T08:21:38Z:
+* notice: last 14d: all unq: 1251 34
+* notice: prev accum: outdated-all outdated-unq / all unq: 481 256 / 1719 310
+* notice: next accum: outdated-all outdated-unq / all unq: 481 256 / 1732 315
+* notice: prev json diff // prev day diff: unq all: +5 +13 / -0 -0 // +5 +13 / -0 -0
+
 2022-03-28T16:25:34Z:
 * notice: last 14d: all unq: 1238 32
 * notice: prev accum: outdated-all outdated-unq / all unq: 481 256 / 1717 310
